# mars-baseline-revised

./: .env.example  .gitignore  README.md  pyproject.toml
.codex/skills/adversarial-review/: SKILL.md
.codex/skills/adversarial-review/scripts/: review.mjs
src/mars/: __init__.py  app.py  baseline_app.py  citations.py  session_cache.py  types.py
src/mars/api/: baseline_dependencies.py  dependencies.py  router.py
src/mars/client/: base.py  cache.py  grobid.py  s2.py  tei.py
src/mars/config/: client.py  pipeline.py  settings.py
src/mars/db/: client.py  study.py
src/mars/llm/agents/: base.py  critic.py  judge.py  meta.py  persona.py  scout.py
src/mars/llm/prompts/: critic.py  debate.py  judge.py  langextract.py  meta.py  persona.py  query.py  question.py  scout.py
src/mars/llm/providers/: base.py  gemini.py  huggingface.py  langextract.py  openai.py  openrouter.py  usage.py
src/mars/logging/: __init__.py  format.py
src/mars/models/: base.py  debate.py  grobid.py  persona.py  s2.py
src/mars/pipeline/cluster/: knn.py  leiden.py  structure.py  umap.py
src/mars/schemas/: base.py  debate.py  event.py  grobid.py  persona.py  query.py
src/mars/services/: cluster.py  debate.py  persona.py  pipeline.py  query.py  retrieval.py
src/mars/utils/: clean_text.py  debate_log.py
src/mars/workflow/: base.py  baseline.py  cluster.py  debate.py  demo.py  persona.py  pipeline.py  query.py  retrieval.py
supabase/migrations/: 20260704130000_study_sessions.sql  20260714120000_add_study_condition.sql
tests/: test_formative_readiness.py  test_streaming_and_persistence.py
web-ui/: package.json  pnpm-lock.yaml
web-ui/src/app/: layout.tsx  page.tsx
web-ui/src/app/baseline/: layout.tsx  page.tsx
web-ui/src/app/canvas/: layout.tsx  page.tsx
web-ui/src/components/common/: agent-avatar.tsx  cited-text.tsx  inline-citation.tsx  paper-card.tsx  query-provider.tsx  queue.tsx  streaming-markdown.tsx
web-ui/src/components/layouts/: base-panel.tsx
web-ui/src/components/ui/: alert-dialog.tsx  button.tsx  chain-of-thought.tsx  checkpoint.tsx  frame.tsx  hover-card.tsx  text-shimmer.tsx  thinking-bar.tsx
web-ui/src/hooks/: use-apply-steer.ts  use-baseline-chat.ts  use-baseline-export.ts  use-create-baseline.ts  use-create-debate.ts  use-create-query.ts  use-debate-events.ts  use-debate.ts  use-export-session.ts  use-extraction.ts  use-hypotheses.ts  use-paper-search.ts  use-papers.ts  use-personas.ts  use-perspectives.ts  use-propose-turn.ts  use-query-events.ts  use-run-cycle.ts  use-run-debate.ts  use-selected-persona.ts  use-stale-query.ts  use-typewriter.ts
web-ui/src/lib/: utils.ts
web-ui/src/store/: agent-builder.ts  baseline.ts
web-ui/src/styles/: canvas.css  globals.css  typography.css
web-ui/src/types/: baseline.ts  debate.ts  paper.ts  persona.ts  query.test.ts  query.ts
web-ui/src/utils/: agent-color.ts  avatar.ts  format.ts
(+61 files in other folders)
