[project]
name = "mars"
version = "0.1.0"
description = "mars | multi-agent system for science"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.0.0",
    "hdbscan>=0.8.36",
    "httpx>=0.28.1",
    "langextract>=1.4.0",
    "lxml>=6.1.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "umap-learn>=0.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mars"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.8",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "tqdm>=4.67.3",
]
