[project]
name = "mars"
version = "0.1.0"
description = "mars | multi-agent system for science"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "supabase>=2.24.0",
]

[project.optional-dependencies]
server = [
    "uvicorn[standard]>=0.12.0",
]
full = [
    "beautifulsoup4>=4.14.3",
    "datasets>=5.0.0",
    "hdbscan>=0.8.36",
    "igraph>=1.0.0",
    "langextract>=1.4.0",
    "leidenalg>=0.12.0",
    "lxml>=6.1.1",
    "numpy>=1.26",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "umap-learn>=0.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mars"]

[tool.vercel]
entrypoint = "src.mars.baseline_app:app"

[dependency-groups]
dev = [
    "fastapi[standard]>=0.136.1",
    "gepa>=0.1.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.8",
    "nest-asyncio>=1.6.0",
    "openai>=2.43.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "tqdm>=4.67.3",
]
